Cleanup StageWorkerDefinition and sub-classes